--- a/components/Posts.css
+++ b/components/Posts.css
@@ -6,13 +6,14 @@
   width: auto;
 }
 .my-masonry-grid_column {
-  padding-left: 30px; /* gutter size */
+  padding-left: 20px; /* gutter size */
   background-clip: padding-box;
 }
 
 /* Style your items */
 .my-masonry-grid_column > div {
   /* change div to reference your elements you put in <Masonry> */
-  background: grey;
-  margin-bottom: 30px;
+  /* background: grey; */
+  margin-bottom: 20px; /* gutter size */
+  border-radius: 0.2rem;
 }
